...
    <string name="full_name">Full name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="agree">I\’ve read and agree to the</string>
    <string name="privacyPolicyLink">terms of privacy policy</string>
    <string name="register">REGISTER</string>
    <string name="alreadyAccount">Already have an account?</string>
    <string name="loginText">LOGIN◀</string>

    <!-- Login Activity -->
    <string name="login">Log in</string>
    <string name="loginButton">LOGIN</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="registerText">REGISTER◀</string>
    <string name="invalidEmail">Please enter a valid email address</string>
    <string name="emptyPassword">The password cannot be empty</string>

...
    <string name="welcomeDesc">Everything went well and Cash Quest is ready to work with you</string>

    <!-- Firebase Configuration -->
    <string name="google_app_id">1:952458125922:android:ac4586423399944859673b</string>
    <string name="firebase_database_url">https://sparky-febd0.firebaseio.com/</string>
    <!-- Side menu items -->
    <string name="editProfile">Edit Profile</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Log out</string>

    <!-- Edit Profile Activity -->
    <string name="profilePicture">Profile Picture</string>
    <string name="newUsername">Enter a new username</string>
    <string name="newEmail">Enter a new email</string>
    <string name="newPassword">Enter a new password</string>
    <string name="saveChanges">Save Changes</string>
    <string name="deleteProfile">Delete Profile</string>

    <string name="milestonesTitle">Milestones and Achievements</string>

    <!-- About Activity -->
    <string name="about_app" >About CashQuest</string>
...
