<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/purple_background">

  <androidx.fragment.app.FragmentContainerView
      android:id="@+id/side_menu_fragment"
      android:name="com.personal_finance_app.SideMenuFragment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="@id/menu_edit_profile"
      app:layout_constraintTop_toTopOf="@id/menu_edit_profile"
      android:layout_marginStart="10dp"
      android:layout_marginTop="10dp"
      tools:layout="@layout/fragment_side_menu" />

  <LinearLayout
      android:id="@+id/containerFields"
      android:layout_width="360dp"
      android:layout_height="600dp"
      android:layout_marginTop="24dp"
      android:background="@drawable/user_profile_background"
      android:orientation="vertical"
      android:padding="36dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/side_menu_fragment"
      tools:ignore="ExtraText">

    <!-- Profile Picture -->
    <ImageView
        android:id="@+id/imgProfilePicture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/profilePicture"
        android:scaleType="centerCrop"
        android:background="@drawable/avatar_background"
        android:src="@drawable/default_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Header Username -->
    <TextView
        android:id="@+id/headerUsernameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jersey"
        android:text="JohnDoe_01"
        android:textColor="#151940"
        android:textSize="32sp" />

    <!-- Header Email -->
    <TextView
        android:id="@+id/headerEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jersey"
        android:text="email@domain.com"
        android:textColor="@color/grey"
        android:textSize="22sp" />

    <!-- Username EditText -->
    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:fontFamily="@font/jersey"
        android:layout_marginTop="16dp"
        android:textColor="#151940"/>

    <EditText
        android:id="@+id/editUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_pencil"
        android:fontFamily="@font/jersey"
        android:hint="@string/newUsername"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="#151940"
        android:textColorHint="@color/grey" />

    <!-- Email EditText -->
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:fontFamily="@font/jersey"
        android:textColor="#151940"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:drawableEnd="@drawable/ic_pencil"
        android:fontFamily="@font/jersey"
        android:hint="@string/newEmail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="@color/grey" />

    <!-- Password EditText -->
    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:fontFamily="@font/jersey"
        android:textColor="#151940"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_pencil"
        android:fontFamily="@font/jersey"
        android:hint="@string/newPassword"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColorHint="@color/grey" />

    <!-- Save Changes Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:fontFamily="@font/jersey"
        android:text="@string/saveChanges"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgProfilePicture"
        android:layout_marginStart="171dp"
        android:backgroundTint="@color/light_purple"
        android:textStyle="bold"/>

    <!-- Delete Profile Button
    <Button
        android:id="@+id/deleteProfileButton"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jersey"
        android:text="@string/deleteProfile"
        android:backgroundTint="@color/red"
        android:layout_marginStart="203dp"
        android:layout_marginTop="20dp"/>
        -->
  </LinearLayout>

  <com.google.android.material.bottomnavigation.BottomNavigationView
      android:id="@+id/nav_view"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:itemIconTint="@color/bottom_nav_color"
      app:itemTextColor="@color/bottom_nav_color"
      android:layout_marginStart="0dp"
      android:layout_marginEnd="0dp"
      android:background="#AFF9FF"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:menu="@menu/bottom_nav_menu" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
      android:id="@+id/fab_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/ic_add"
      android:tint="@android:color/white"
      app:backgroundTint="@color/teal_200"
      app:elevation="8dp"
      app:layout_constraintBottom_toBottomOf="@id/nav_view"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>